Added proper cursor and ability to add tiles of different sizes

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -4,18 +4,16 @@
   <meta charset="UTF-8">
   <link rel="shortcut icon" href="img/fav.ico">
   <script src="js/jquery.min.js"></script>
-  <script src="js/phaser.js"></script>
+  <script src="js/phaser.min.js"></script>
   <script src="js/underscore.min.js"></script>
   <script src="js/main.js"></script>
 
   <style>
-    #container {
-      cursor: crosshair;
-    }
   </style>
 </head>
 
 <body>
-    <div id="container"></div>
+left click to place tile<br/>
++ / - on numpad to change tile size<br/>
 </body>
 </html>
